[package]
name = "ctrl-vpces"
version = "0.1.0"
authors = [
  "LOU Xun <xun.lou@controlant.com>",
  "Olafur Gislason <olafur.gislason@controlant.com>",
]
description = "Allowed Principals controller for AWS VPC Endpoint Services"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
log = "0.4"
env_logger = "0.10"

# Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# AWS
control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "cb73371" }
aws-types = "0.56"
aws-config = "0.56"
aws-sdk-ec2 = "0.31"
aws-sdk-sts = "0.31"
