[package]
name = "ctrl-vpces"
version = "0.2.0"
authors = [
  "LOU Xun <xun.lou@controlant.com>",
  "Olafur Gislason <olafur.gislason@controlant.com>",
]
description = "Allowed Principals controller for AWS VPC Endpoint Services"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
log = "0.4"
env_logger = "0.10"
fastrand = "2"

# Runtime
tokio = { version = "1", features = ["full"] }

# AWS
control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "41f33f5" }
aws-types = "1"
aws-config = "1"
aws-sdk-ec2 = "1.1"
aws-sdk-sts = "1.1"
