[package]
name = "ctrl-vpces"
version = "0.2.1"
authors = [
  "Olafur Gislason <olafur.gislason@controlant.com>",
  "LOU Xun <xun.lou@controlant.com>",
]
description = "Allowed Principals controller for AWS VPC Endpoint Services"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
log = "0.4"
env_logger = "0.11"
fastrand = "2"

# Runtime
tokio = { version = "1", features = ["full"] }

# AWS
control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "b26c6b7" }
aws-types = "1"
aws-config = "1"
aws-sdk-ec2 = "1"
aws-sdk-sts = "1"
